grammar.js
    source_file: ($) => repeat($._declaration),

    // ─── Comments ──────────────────────────────────
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    type_identifier: ($) => /[A-Z][a-zA-Z0-9_]*/,

    // ───────────────────────────────────────────────
    // Top-level declarations
    // ───────────────────────────────────────────────
    _declaration: ($) =>
      choice(
        $.use_statement,
        $.struct_definition,
        $.schema_definition,
        $.enum_definition,
        $.actor_definition,
        $.trait_definition,
        $.impl_block,
        $.type_alias,
        $.test_definition,
        $.ffi_declaration,
        $.statement,
      ),

    statement: ($) =>
      choice(
        $.let_declaration,
        $.const_declaration,
        $.mut_declaration,
        $.assignment_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
        $.if_expression,
        $.while_statement,
        $.for_statement,
        $.loop_statement,
        $.match_expression,
        $.try_expression,
        $.throw_statement,
        $.block,
        $.assert_statement,
        $.comptime_block,
        $.function_definition,
      ),

    expression_statement: ($) => seq($._expression, optional(";")),

    block: ($) => seq("{", repeat($.statement), "}"),

    // ─── Let/Const/Mut ────────────────────────────
    let_declaration: ($) =>
      seq(
        "let",
        field("name", choice($.identifier, "_")),
        optional(seq(":", $._type)),
        optional(seq("=", $._expression)),
        optional(";"),
      ),

    const_declaration: ($) =>
      seq(
        "const",
        field("name", $.identifier),
        optional(seq(":", $._type)),
        "=",
        $._expression,
        optional(";"),
      ),

    mut_declaration: ($) =>
      seq(
        "mut",
        field("name", $.identifier),
        optional(seq(":", $._type)),
        optional(seq("=", $._expression)),
        optional(";"),
      ),

    assignment_statement: ($) =>
      seq(
        choice($.identifier, $.member_expression, $.index_expression),
        choice("=", "+=", "-=", "*=", "/="),
        $._expression,
        optional(";"),
      ),

    // ─── Return / Break / Continue ───────────────
    return_statement: ($) =>
      seq("return", optional($._expression), optional(";")),

    match_expression: ($) =>
      seq("match", $._expression, "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(choice($._expression, "case"), "=>", $._expression, optional(",")),

    try_expression: ($) =>
      seq(
        "try",
        $.block,
        optional(seq("catch", optional($.identifier), $.block)),
      ),

    throw_statement: ($) =>
      seq("throw", "(", $._expression, ")", optional(";")),

    function_definition: ($) =>
      seq(
        repeat($.decorator),
        optional("pub"),
        optional("async"),
        "fn",
        field("name", $.identifier),
        optional($.generic_parameters),
        "(",
        commaSep($.parameter),
        ")",
        optional(seq("->", $._type, repeat(seq(",", $._type)))),
        choice($.block, seq("=>", $._expression)),
      ),

    parameter: ($) =>
      seq(field("name", $.identifier), optional(seq(":", $._type))),

    struct_definition: ($) =>
      seq(
        repeat($.decorator),
        optional("pub"),
        "struct",
        field("name", $.type_identifier),
        optional($.generic_parameters),
        "{",
        commaSep($.struct_field),
        "}",
      ),

    // A `schema Name { field: Type }` declaration. `schema` is consumed ONLY
    // here, so a bare `schema` elsewhere still parses as a normal identifier.
    struct_field: ($) =>
      seq(
        repeat($.field_decorator),
        field("name", $.identifier),
        optional(seq(":", $._type)),
        optional(seq("=", $._expression)),
      ),

    enum_definition: ($) =>
      seq(
        "enum",
        field("name", $.type_identifier),
        optional($.generic_parameters),
        "{",
        commaSep($.enum_variant),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", commaSep1($._type), ")")),
      ),

    // ───────────────────────────────────────────────
    // Actor definition
    // ───────────────────────────────────────────────
    actor_definition: ($) =>
      seq(
        "actor",
        field("name", $.identifier),
        "{",
        repeat(
          choice(
            seq(
              $.identifier,
              optional(seq(":", $._type)),
              optional(seq("=", $._expression)),
              optional(","),
            ),
            $.function_definition,
          ),
        ),
        "}",
      ),

    // ───────────────────────────────────────────────
    // Trait definition
    // ───────────────────────────────────────────────
    impl_block: ($) =>
      seq(
        "impl",
        field("type", $._type),
        "{",
        repeat(
          seq(
            optional("pub"),
            "fn",
            $.identifier,
            "(",
            commaSep($.parameter),
            ")",
            optional(seq("->", $._type)),
            choice($.block, seq("=>", $._expression)),
          ),
        ),
        "}",
      ),

    // ───────────────────────────────────────────────
    // Type alias
    // ───────────────────────────────────────────────
    ffi_declaration: ($) =>
      seq(
        "@",
        "ffi",
        "(",
        $.string,
        ",",
        $.string,
        ")",
        "fn",
        $.identifier,
        "(",
        commaSep($.parameter),
        ")",
        optional(seq("->", $._type)),
        optional(";"),
      ),

    // ─── Decorator ───────────────────────────────
    _type: ($) =>
      choice(
        $.primitive_type,
        $.type_identifier,
        $.generic_type,
        $.array_type,
        $.function_type,
        $.tuple_type,
      ),

    primitive_type: ($) =>
      choice(
        "bool",
        "int",
        "float",
        "string",
        "byte",
        "void",
        "ptr",
        "c_int",
        "c_double",
        "c_float",
        "c_char",
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.self,
        $.number,
        $.string,
        $.single_quote_string,
        $.interpolated_string,
        $.byte_slice,
        $.regex_literal,
        $.boolean,
        $.null,
        $.array_literal,
        $.map_literal,
        $.struct_literal,
        $.enum_literal,
        $.lambda_expression,
        $.anonymous_function,
        $.unary_expression,
        $.await_expression,
        $.propagate_expression,
        $.optional_chain,
        $.nil_coalescing_expression,
        $.binary_expression,
        $.channel_send,
        $.range_expression,
        $.channel_receive,
        $.dispatch_call,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.if_expression,
        $.match_expression,
        $.try_expression,
        $.block,
        $.paren_expression,
      ),

    string: ($) =>
      seq(
        '"',
        repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), /\\(.|\n)/)),
        '"',
      ),

    interpolated_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\\{\n]+/)),
            /\\(.|\n)/,
            seq("{", $._expression, "}"),
          ),
        ),
        '"',
      ),

    number: ($) =>
      token(
        choice(
          /0[xX][0-9a-fA-F]+/,
          /0[bB][01]+/,
          /0[oO][0-7]+/,
          /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,
          /[0-9]+/,
        ),
      ),

    struct_literal: ($) =>
      seq(
        field("type", $.type_identifier),
        "{",
        commaSep(seq($.identifier, ":", $._expression)),
        optional(","),
        "}",
      ),

    enum_literal: ($) =>
      seq(
        field("type", $.type_identifier),
        "::",
        field("variant", $.identifier),
        optional(seq("(", commaSep($._expression), ")")),
      ),

    // ─── Lambda ─────────────────────────────────
    propagate_expression: ($) => prec(12, seq($._expression, "?")),

    // ─── Optional chain ────────────────────────
    binary_expression: ($) =>
      choice(
        // Logical or
        prec.left(2, seq($._expression, choice("or", "||"), $._expression)),
        // Logical and
        prec.left(3, seq($._expression, choice("and", "&&"), $._expression)),
        // Equality
        prec.left(4, seq($._expression, choice("==", "!="), $._expression)),
        // Comparison
        prec.left(
          5,
          seq($._expression, choice("<", ">", "<=", ">="), $._expression),
        ),
        // Bitwise or
        prec.left(6, seq($._expression, "|", $._expression)),
        // Bitwise xor
        prec.left(7, seq($._expression, "^", $._expression)),
        // Bitwise and
        prec.left(8, seq($._expression, "&", $._expression)),
        // Term (add/sub)
        prec.left(9, seq($._expression, choice("+", "-"), $._expression)),
        // Factor (mul/div/mod)
        prec.left(10, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    call_expression: ($) =>
      prec(
        14,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.enum_literal,
              $.index_expression,
              $.call_expression,
              $.dispatch_call,
              $.paren_expression,
            ),
          ),
          "(",
          commaSep(choice($._expression, $.named_argument)),
          ")",
        ),
      ),

    member_expression: ($) =>
      prec(
        15,
        seq(
          choice(
            $.identifier,
            $.self,
            $.member_expression,
            $.call_expression,
            $.dispatch_call,
            $.index_expression,
            $.paren_expression,
          ),
          ".",
          field("property", $.identifier),
        ),
      ),
